amended alignment issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,28 +1,6 @@
-.container {
-    margin: 0 auto;
-    max-width: 1200px;
-    width: 85%;
-    padding-top: 20px;
-
-}
-
-.row {
-    max-width: 85%;
-    margin-bottom: 20px;
-    display: flex; flex-wrap: wrap;
-
-    
-}
-
-.mainimage {
-    display: flex; flex-wrap: wrap;
-    position: center;
-    max-width: 100%;
-}
-
-outlines {
+/* {
     border: 1px solid rgb(138, 136, 136) !important;
-}
+} */
 
 * {
     -webkit-box-sizing: border-box;
@@ -35,7 +13,25 @@ outlines {
 }
 * {
     align-content: center;
-    align-self: center;
+}
+
+.container {
+    margin: 0 auto;
+    max-width: 1200px;
+    width: 85%;
+    padding-top: 20px;
+}
+
+.row {
+    max-width: 85%;
+    margin-bottom: 20px;
+    display: flex; flex-wrap: wrap;
+}
+
+.mainimage {
+    display: flex; flex-wrap: wrap;
+    position: center;
+    max-width: 100%;
 }
 
 
@@ -49,6 +45,7 @@ outlines {
 
 .col-3 {
     width: 25%;
+    vertical-align: middle;
 }
 
 .col-4 {
@@ -57,7 +54,7 @@ outlines {
     padding-right: 5px;
     padding-left: 5px;
     text-align: center;
-    display: table;
+    vertical-align: top;
 }
 
 .col-5 {
@@ -156,8 +153,6 @@ footer {
 
 img {
     width: 100%;
-    height: 100%;
-
 }
 
 li {
